<resources>
    <string name="app_name">Agenda Médica</string> <!-- Nombre de la aplicación móvil -->

    <!-- 1.Modulo pantalla de Bienvenida -->
    <string name="m1_tit1">Bienvenido</string>
    <string name="m1_sub1">Agenda tu cita médica desde tu smartphone sin ningún costo.</string>
    <string name="m1_btn1">Comenzar</string>

    <!-- 2.Modulo de login -->
    <string name="m2_tit1">Iniciar Sesión</string>
    <string name="m2_sub1">Para poder continuar necesitas iniciar sesión.</string>
    <string name="m2_txt1">Ingresar correo electrónico</string>
    <string name="m2_cjt1">Correo</string>
    <string name="m2_txt2">Ingresar contraseña</string>
    <string name="m2_cjt2">Contraseña</string>
    <string name="m2_txt3">¿Olvidaste tu contraseña?</string>
    <string name="m2_btn1">Iniciar sesión</string>
    <string name="m2_btn2">Registrarse</string>
    <string name="m2_txt4">Google</string>
    <string name="m2_btn3">Iniciar sesión con Google</string>

    <!-- 3.Modulo de registro -->
    <string name="m3_tit1">Registrarse</string>
    <string name="m3_sub1">Registra tus datos solicitados para brindar nuestros servicios.</string>
    <string name="m3_txt1">Ingresar nombre completo</string>
    <string name="m3_txt2">Ingresar correo electrónico</string>
    <string name="m3_txt3">Ingresar contraseña</string>
    <string name="m3_txt4">Soy mayor de 18 años y acepto los términos y condiciones</string>
    <string name="m3_edittxt1">Nombre completo</string>
    <string name="m3_edittxt2">Correo electronico</string>
    <string name="m3_edittxt3">**********</string>
    <string name="m3_btn1">Registrarse</string>

    <!-- 4.Modulo de menu principal -->
    <string name="m4_tit1">Hola,</string>
    <string name="m4_sub1">Bienvenido</string>
    <string name="m4_sub2">(…, &#8230;) ?</string>
    <string name="m4_txt1">Agendar cita</string>
    <string name="m4_txt2">Ayuda</string>
    <string name="m4_txt3">Acerca de</string>
    <string name="m4_txt4">Evaluación</string>
    <string name="m4_txt5">Encuesta</string>
    <string name="m4_txt6">Salir</string>

    <!-- 5.Modulo de agendar cita -->
    <string name="m5_tit1">Agenda tu cita médica</string>
    <string name="m5_txt1">Fecha</string>
    <string name="m5_etxt1">Fecha</string>
    <string name="m5_txt2">Hora</string>
    <string name="m5_etxt2">Hora</string>
    <string name="m5_txt3">Nombre completo</string>
    <string name="m5_etxt3">Nombre Completo</string>
    <string name="m5_txt4">Edad</string>
    <string name="m5_etxt4">Edad</string>
    <string name="m5_txt5">Razón de cita</string>
    <string name="m5_etxt5">Razon de Cita</string>
    <string name="m5_txt6">Tipo de servicio que solicita:</string>
    <string name="m5_rdb1">Terapia de pareja</string>
    <string name="m5_rdb2">Terapia individual</string>
    <string name="m5_rdb3">Terapia familiar</string>
    <string name="m5_txt7">Tipo de consulta:</string>
    <string name="m5_rdb4">Presencial</string>
    <string name="m5_rdb5">Virtual</string>
    <string name="m5_btn1">Agendar</string>
    <string name="m5_btn2">Cancelar</string>
    <string name="m5_btn3">Fechas</string>
    <string name="m5_btn4">Horas</string>


    <!-- 6.Modulo de ayuda -->
    <string name="m6_tit1">Ayuda</string>
    <string name="m6_txt1">¿Qué contiene?</string>
    <string name="m6_txt2"> Carrucel de información mas relevante de la clínica, módulo Agendar cita, módulo Ayuda y módulo Acerca de.</string>
    <string name="m6_txt3">¿Comó agendo una cita?</string>
    <string name="m6_txt4">Para poder agendar una cita necesitas primero aprobar un filtro de 4 preguntas para poder ver si eres apto para generar tu cita. Si eres aprobado ya solo necesitas llenar tus datos personales y dar clíc en el botón “Agendar”.</string>
    <string name="m6_txt5">¿Comó cancelo una cita?</string>
    <string name="m6_txt6">Para cancelar tu cita, solo ingresa al módulo “Agendar cita” y da clíc en el botón “Cancelar y tu cita sera cancelada.</string>


    <!-- 7.Modulo Acerca de -->
    <string name="m7_tit1">Acerca de</string>
    <string name="m7_txt1">Políticas de privacidad de la aplicación móvil</string>
    <string name="m7_txt2">Aquí se mostraran las políticas de privacidad de la aplicación.</string>
    <string name="m7_txt3">Políticas de privacidad de la clínica</string>
    <string name="m7_txt4">Aquí se mostraran las políticas de privacidad de la clínica.</string>

    <!-- 8.Modulo PDF -->
    <string name="m8_tit1">Documentación</string>
    <string name="m8_txt1">Sube aquí una foto o archivo PDF de los siguientes documentos.</string>
    <string name="m8_txt2">-Credencial de lector.</string>
    <string name="m8_txt3">-Carta de confidencialidad.</string>
    <string name="m8_btn1">Subir documentos</string>

    <!-- 9.Modulo de filtro de preguntas -->
    <string name="m9_tit1">Filtro de preguntas</string>
    <string name="m9_txt1">1.-¿En los últimos 6 meses has pensado en atentar en contra de tu vida o la vida de alguien más?</string>
    <string name="m9_txt2">2.-¿Consumes sustancias adictivas legales o ilegales?</string>
    <string name="m9_txt3">3.-En caso de que sí, ¿este consumo de relaciona con tu mítico de consulta?</string>
    <string name="m9_txt4">4.-En la actualidad, ¿vives alguna situación de violencia?</string>
    <string name="m9_rd1">Si</string>
    <string name="m9_rd2">No</string>
    <string name="m9_rd3">Si</string>
    <string name="m9_rd4">No</string>
    <string name="m9_rd5">Si</string>
    <string name="m9_rd6">No</string>
    <string name="m9_rd7">Si</string>
    <string name="m9_rd8">No</string>
    <string name="m9_btn1">Enviar</string>
    <string name="m9_btn2">Cancelar</string>

    <!-- 10. Modulo encuesta de satisfaccion -->
    <string name="m10_tit1">Encuesta de satisfacción al usuario</string>
    <string name="m10_txt1">1.-En general ¿cómo calificalificaría la calidad y su experiencia con el servicio mediente la aplicación?</string>
    <string name="m10_txt2">2.-¿Tuviste problemas al agendar una cita?</string>
    <string name="m10_txt3">3.-¿Cómo te parecio la consulta virtual?</string>
    <string name="m10_txt4">4.-¿Volverias agendar tu cita por medio de la aplicación?</string>
    <string name="m10_txt5">5.-¿Recomendarias esta aplicación a tus conocidos?</string>
    <string name="m10_rd1">Muy positiva</string>
    <string name="m10_rd2">Positiva</string>
    <string name="m10_rd3">Neutral</string>
    <string name="m10_rd4">Negativa</string>
    <string name="m10_rd5">Muy negativa</string>
    <string name="m10_rd6">Si</string>
    <string name="m10_rd7">No</string>
    <string name="m10_rd8">Excelente</string>
    <string name="m10_rd9">Buena</string>
    <string name="m10_rd10">Mala</string>
    <string name="m10_rd11">Pesima</string>
    <string name="m10_rd12">Si</string>
    <string name="m10_rd13">No</string>
    <string name="m10_rd14">Si</string>
    <string name="m10_rd15">No</string>
    <string name="m10_btn1">Enviar</string>

    <!-- 11. Boton de navegacion-->
    <string name="m11_tit1">Menú</string>
    <string name="m11_tit2">Cita</string>
    <string name="m11_tit3">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TAMAÑO DE LETRA TEXTOS -->
    <dimen name="dimTitulos">32sp</dimen>
    <dimen name="dimSubtitulos">24sp</dimen>
    <dimen name="dimDescripicon">18sp</dimen>

    <!-- 12. Fragment Perfil de usuario -->
    <string name="m12_tit1">Perfil de Usuario</string>
    <string name="m12_txt1">Nombre:</string>
    <string name="m12_txt2">Correo electronico:</string>
    <string name="m12_txt3">Teléfono:</string>
    <string name="m12_txt4">Teléfono de emergencia:</string>
    <string name="m12_txt5">PDF:</string>
    <string name="m12_txt6">Carta de confidencialidad:</string>
    <string name="m12_cjt1">Nombre</string>
    <string name="m12_cjt2">Correo electronico</string>
    <string name="m12_cjt3">Teléfono</string>
    <string name="m12_cjt4">Teléfono de emergencia</string>
    <string name="m12_cjt5">PDF</string>
    <string name="m12_cjt6">Carta</string>
    <string name="m12_btn1">Editar perfil</string>
    <string name="m12_btn2">Salir</string>

    <!-- 13. Fragment Perfil de usuario -->
    <string name="m13_tit1">Editar perfil</string>
    <string name="m13_txt1">Nombre:</string>
    <string name="m13_txt2">Correo electronico:</string>
    <string name="m13_txt3">Teléfono:</string>
    <string name="m13_txt4">Teléfono de emergencia:</string>
    <string name="m13_cjt1">Nombre</string>
    <string name="m13_cjt2">Correo electronico</string>
    <string name="m13_cjt3">Teléfono</string>
    <string name="m13_cjt4">Teléfono de emergencia</string>
    <string name="m13_btn1">Subir documentos</string>
    <string name="m13_btn2">Guardar cambios</string>
    <string name="m13_btn3">Cambiar foto de perfil</string>

    <!-- 14. Fragment Perfil de usuario -->
    <string name="m14_sub1">La fecha de tu cita médica es:</string>
    <string name="m14_txt1">Fecha</string>
    <string name="m14_sub2">En un horario de:</string>
    <string name="m14_txt2">Hora</string>
    <string name="m14_sub3">Con nombre de paciente:</string>
    <string name="m14_txt3">Nombre</string>
    <string name="m14_sub4">Edad:</string>
    <string name="m14_txt4">Edad</string>
    <string name="m14_sub5">Razón por la cual agenda la cita:</string>
    <string name="m14_txt5">Razón</string>
    <string name="m14_sub6">Tipo de servicio que solicita:</string>
    <string name="m14_txt6">Servicio</string>
    <string name="m14_sub7">Tipo de consulta:</string>
    <string name="m14_txt7">Consulta</string>


    <!-- Content Description -->
    <string name="con_des1">ImageOne</string>
    <string name="con_des2">ImagePDF</string>
    <string name="con_des3">ImagePerfil</string>
    <string name="con_des4">ImageBienvenida</string>
    <!-- Acerca de -->
    <string name="con_des5">id_wave_3</string>


</resources>