<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Agendar">

    <ImageView
        android:id="@+id/id_wave_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/wave_3"
        android:contentDescription="@string/con_des1"/>

    <TextView
        android:id="@+id/id_m5_tit1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/m5_tit1"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_wave_3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/id_m5_btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_m5_tit1">

        <LinearLayout
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_m5_txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m5_txt1"
                android:textColor="@color/TextosNegro"
                android:textSize="@dimen/dimDescripicon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/id_m5_btn3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/m4_txt2"
                    android:drawableStart="@drawable/ic_btn_calender" />

                <EditText
                    android:id="@+id/m5_etxt1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="off"
                    android:background="@drawable/an_btn_5"
                    android:ems="10"
                    android:inputType="textNoSuggestions"
                    android:contentDescription="@string/m5_etxt1"/>
            </LinearLayout>

            <TextView
                android:id="@+id/id_m5_txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m5_txt2"
                android:textColor="@color/TextosNegro"
                android:textSize="@dimen/dimDescripicon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/id_m5_btn4"
                    android:layout_width="50dp"
                    android:layout_height="52dp"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/m5_btn4"
                    android:drawableStart="@drawable/ic_btn_reloj" />

                <EditText
                    android:id="@+id/id_m5_etxt2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="off"
                    android:background="@drawable/an_btn_5"
                    android:ems="10"
                    android:inputType="textNoSuggestions"
                    android:contentDescription="@string/m5_etxt2"/>

            </LinearLayout>

            <TextView
                android:id="@+id/id_m5_txt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m5_txt3"
                android:textColor="@color/TextosNegro"
                android:textSize="@dimen/dimDescripicon" />

            <EditText
                android:id="@+id/id_m5_etxt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="off"
                android:background="@drawable/an_btn_5"
                android:contentDescription="@string/m5_etxt3"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/id_m5_txt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m5_txt4"
                android:textColor="@color/TextosNegro"
                android:textSize="@dimen/dimDescripicon" />

            <EditText
                android:id="@+id/id_m5_etxt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/an_btn_5"
                android:ems="10"
                android:inputType="textNoSuggestions"/>

            <TextView
                android:id="@+id/id_m5_txt5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m5_txt5"
                android:textColor="@color/TextosNegro"
                android:textSize="@dimen/dimDescripicon"/>

            <EditText
                android:id="@+id/id_m5_etxt5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="off"
                android:background="@drawable/an_btn_5"
                android:contentDescription="@string/m5_etxt5"
                android:ems="10"
                android:inputType="textNoSuggestions"/>

            <TextView
                android:id="@+id/id_m5_txt6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m5_txt6"
                android:textColor="@color/TextosNegro"
                android:textSize="@dimen/dimDescripicon" />

            <RadioGroup
                android:id="@+id/radioGroupUno"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/id_m5_rdb1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/m5_rdb1" />

                <RadioButton
                    android:id="@+id/id_m5_rdb2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/m5_rdb2" />

                <RadioButton
                    android:id="@+id/id_m5_rdb3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/m5_rdb3" />
            </RadioGroup>

            <TextView
                android:id="@+id/id_m5_txt7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/m5_txt7"
                android:textColor="@color/TextosNegro"
                android:textSize="@dimen/dimDescripicon" />

            <RadioGroup
                android:id="@+id/radioGroupDos"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/id_m5_rdb4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/m5_rdb4" />

                <RadioButton
                    android:id="@+id/id_m5_rdb5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/m5_rdb5" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/id_m5_btn1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/an_btn_1"
        android:text="@string/m5_btn1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_m5_btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/id_m5_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/an_btn_3"
        android:text="@string/m5_btn2"
        android:onClick="showAlertDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

